# dbt-lint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml
docs/: companion-tools.md  configuration.md  custom-rules.md  recommended-configs.md  rules.md
examples/: avoid_select_distinct.py  model_requires_scheduling_tag.py  source_missing_index_meta.py  staging_no_cte_wrapping.py  staging_table_missing_indexes.py
examples/tests/: avoid_select_distinct_test.py  conftest.py  model_requires_scheduling_tag_test.py  source_missing_index_meta_test.py  staging_no_cte_wrapping_test.py  staging_table_missing_indexes_test.py
src/dbt_lint/: __init__.py  __main__.py  _lint.py  baseline.py  classifier.py  config.py  engine.py  extend.py  filters.py  graph.py  loader.py  manifest.py  models.py  registry.py  reporter.py  suppressions.py
src/dbt_lint/rules/: __init__.py  documentation.py  governance.py  performance.py  testing.py
src/dbt_lint/rules/modeling/: __init__.py  dependency_hygiene.py  graph_structure.py  layer_boundaries.py
src/dbt_lint/rules/structure/: __init__.py  materialization.py  naming.py
src/dbt_linter/: __init__.py  __main__.py  baseline.py  config.py  engine.py  extend.py  graph.py  loader.py  manifest.py  models.py  reporter.py
src/dbt_linter/rules/: __init__.py  documentation.py  governance.py  modeling.py  performance.py  structure.py  testing.py
src/dbt_linter/rules/modeling/: __init__.py  dependency_hygiene.py  graph_structure.py  layer_boundaries.py
src/dbt_linter/rules/structure/: __init__.py  materialization.py  naming.py
tests/: conftest.py  helpers.py  test_baseline.py  test_classifier.py  test_cli.py  test_config.py  test_engine.py  test_engine_integration.py  test_extend.py  test_filters.py  test_framework.py  test_framework_integration.py  test_graph.py  test_loader.py  test_manifest.py  test_models.py  test_pipeline.py  test_registry.py  test_reporter.py  test_run.py  test_suppressions.py
tests/test_rules/: conftest.py  test_documentation.py  test_governance.py  test_modeling.py  test_performance.py  test_structure.py  test_testing.py
tests/test_rules/test_modeling/: test_dependency_hygiene.py  test_graph_structure.py  test_layer_boundaries.py
tests/test_rules/test_structure/: test_materialization.py  test_naming.py
