[project]
name = "dbt-linter"
version = "0.1.0"
description = "Manifest-only semantic linter for dbt projects"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "click",
]

[project.scripts]
dbt-lint = "dbt_linter.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_linter"]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
