[project]
name = "dbt-lint"
version = "0.1.0"
description = "Manifest-only semantic lint tool for dbt projects"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "click",
]

[project.scripts]
dbt-lint = "dbt_lint.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_lint"]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "I",     # isort
  "E",     # pycodestyle-errors
  "D300",  # pydocstyle: tripple-single-quotes
  "F",     # pyflakes
  "PLC",   # pylint-convention
  "PLE",   # pylint-error
  "PLR",   # pylint-refactor
  "PLW",   # pylint-warning
  "UP",    # pyupgrade
  "RUF",   # ruff
]
extend-ignore = [
  "E501", # pycodestyle: line-too-long
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "PLR2004", # pylint: magic-value-comparison
]
