[project]
name = "dbt-lint"
version = "0.1.0"
description = "Static analysis tool for dbt projects"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Dan Thompson" },
]
keywords = [
  "data-engineering",
  "dbt",
  "lint",
  "static-analysis",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "click",
  "pyyaml",
]

[project.scripts]
dbt-lint = "dbt_lint.__main__:main"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "ty",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10"]
build-backend = "uv_build"

[tool.pytest]
testpaths = [
  "examples/tests",
  "tests",
]

[tool.ruff]
src = [
  "src",
  "tests",
]

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "I",  # isort
  "E",  # pycodestyle-errors
  "D300",  # pydocstyle: tripple-single-quotes
  "F",  # pyflakes
  "PLC",  # pylint-convention
  "PLE",  # pylint-error
  "PLR",  # pylint-refactor
  "PLW",  # pylint-warning
  "UP",  # pyupgrade
  "RUF",  # ruff
]
ignore = [
  "E501",  # pycodestyle: line-too-long
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "PLR2004",  # pylint: magic-value-comparison
]
